@@ -41,7 +41,7 @@ dfsch_object_t* dfsch_regex_compile(char* expression, int flags){
   GC_REGISTER_FINALIZER(r, (GC_finalization_proc)regex_finalizer,
                         NULL, NULL, NULL);
   
-  r->sub_count = 0;
+  r->sub_count = 1;
   escape = 0;
 
   while (*expression){
@@ -73,7 +73,46 @@ int dfsch_regex_match_p(dfsch_object_t* regex, char* string, int flags){
 }
 dfsch_object_t* dfsch_regex_substrings(dfsch_object_t* regex, char* string,
                                        int flags){
+  regmatch_t *match;
+  dfsch_regex_t* r;
+  int i;
+  int count;
+  dfsch_object_t* vector;
 
+  if (regex->type != &regex_type)
+    dfsch_throw("regex:not-a-regex", regex);
+
+  r = (dfsch_regex_t*)regex;
+
+  match = GC_MALLOC_ATOMIC(r->sub_count);
+
+  if (regexec(&(r->regex), string, r->sub_count, match, flags) == REG_NOMATCH){
+    GC_FREE(match);
+    return NULL;
+  }
+
+  count = 0;
+
+  for (i = 0; i < r->sub_count; i++){
+    if (match[i].rm_so == -1)  // No more substring matches
+      break;
+    count ++;
+  }
+
+  vector = dfsch_make_vector(count, NULL);
+  
+  for (i = 0; i < count; i++){
+    dfsch_vector_set(vector, i, 
+                     dfsch_vector(3,
+                                  dfsch_make_number_from_long(match[i].rm_so),
+                                  dfsch_make_number_from_long(match[i].rm_eo),
+                                  dfsch_make_string_buf(string+match[i].rm_so,
+                                                        match[i].rm_eo-match[i].rm_so)));
+  } 
+
+  GC_FREE(match);
+    
+  return vector;
 }
 
 
@@ -114,7 +153,7 @@ static dfsch_object_t* native_regex_match_p(void *baton,
                                             dfsch_tail_escape_t* esc){
   dfsch_object_t* expression;
   char* string;
-  int flags = REG_EXTENDED;
+  int flags = 0;
   DFSCH_OBJECT_ARG(args, expression);
   DFSCH_STRING_ARG(args, string);
 
@@ -126,12 +165,29 @@ static dfsch_object_t* native_regex_match_p(void *baton,
   return dfsch_bool(dfsch_regex_match_p(expression, string, flags));
 }
 
+static dfsch_object_t* native_regex_substrings(void *baton, 
+                                               dfsch_object_t* args, 
+                                               dfsch_tail_escape_t* esc){
+  dfsch_object_t* expression;
+  char* string;
+  int flags = 0;
+  DFSCH_OBJECT_ARG(args, expression);
+  DFSCH_STRING_ARG(args, string);
 
+  FLAG_PARSER_BEGIN(args);
+  FLAG_SET("notbol", REG_NOTBOL, flags);
+  FLAG_SET("noteol", REG_NOTEOL, flags);
+  FLAG_PARSER_END(args);
+
+  return dfsch_regex_substrings(expression, string, flags);
+}
 
 dfsch_object_t* dfsch_regex_register(dfsch_ctx_t *ctx){
   dfsch_ctx_define(ctx, "regex:compile", 
                    dfsch_make_primitive(&native_regex_compile,NULL));
   dfsch_ctx_define(ctx, "regex:match?", 
                    dfsch_make_primitive(&native_regex_match_p,NULL));
+  dfsch_ctx_define(ctx, "regex:substrings", 
+                   dfsch_make_primitive(&native_regex_substrings,NULL));
   return NULL;
 }
