@@ -1,3 +1,7 @@
+2006-10-05  Ales Hakl  <ales at hakl dot net>
+
+	* lib/regex.c (dfsch_regex_substrings): substring matches
+
 2006-10-04  Ales Hakl  <ales at hakl dot net>
 
 	* lib/threads.c (dfsch_threads_register): Fixed prototypes of 
